--- a/Index.html
+++ b/Index.html
@@ -18,5 +18,7 @@
   <audio autoplay loop>
     <source src="tune.mp3" type="audio/mpeg">
   </audio>
+  <a href="page2.html" 
+    class="next-btn">Next ➡️</a>
 </body>
 </html>
