--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 class="glow">🎉 Happy Birthday Niyati 🎂</h1>
     <p class="subtitle">A little surprise for you 🎈</p>
     <a href="page2.html" class="btn">Next ➡️</a>
+  <img src="https://www.flaticon.com/svg/static/icons/svg/1828/1828778.svg" alt="Happy Birthday Banner">
   </div>
 
   <audio autoplay loop>
