--- a/page2.html
+++ b/page2.html
@@ -10,8 +10,7 @@
   <div class="container">
     <h1 class="glow">🎈 Wishing You Joy & Laughter 🎈</h1>
     <p class="message">May your day be full of smiles, fun, and endless happiness ✨</p>
-    <img src="https://i.imgur.com/Y6X6l4P.png" class="sticker" alt="balloon">
-    <img src="https://i.imgur.com/QJ1X3xD.png" class="sticker" alt="gift">
+    <img src="cat-cuteness-sticker-facial-expression-cute-cat-tilted-head-to-sell-meng-expression-9c7fe4cb32cfc6b35e57d797f1f63f45.png" class="sticker" alt="cat">
     <a href="page3.html" class="btn">Next ➡️</a>
   </div>
 </body>
