--- a/page3.html
+++ b/page3.html
@@ -10,8 +10,7 @@
   <div class="container">
     <h1 class="glow">🍰 Make a Wish, Niyati 🎂</h1>
     <p class="message">Here’s to a sweet year ahead, just like this cake! 🥳</p>
-    <img src="https://i.imgur.com/2z9X0lU.png" class="sticker" alt="cake">
-    <img src="https://i.imgur.com/TpqI9HT.png" class="sticker" alt="party hat">
+    <img src="birthday-cake-cupcake-cartoon-cakes-kavaii-cute-drawing-65bd32f8ce4bb72177ad7eeee29bcfc9.png" class="sticker" alt="cake">
     <a href="page4.html" class="btn">Final Surprise ➡️</a>
   </div>
 </body>
