--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Niyati 🎉</title>
+  <title>Happy Birthday Miss 🎉</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -41,7 +41,7 @@
     <h1>🎂 Happy Birthday Niyati 🎉</h1>
     <p>Wishing you a day filled with laughter, joy, and lots of cake 🍰.<br>
        May all your dreams come true and this year be your best one yet! 🌸</p>
-    <p>Your friend is sending you this little surprise website, made just for you 💖</p>
+    <p>Your friend is sending you this little surprise website, made just for you 💖...</p>
   </div>
 
   <!-- Confetti Library -->
